env/code_53f04502a43e7/stderr.txt
  File "main.py", line 3
    for line in open(../../../etc/passwd):
                     ^
SyntaxError: invalid syntax
